tests/e2e/gateway-prestopscript/00-install.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: ssg-lifecycle-test
spec:
  version: "11.2.1"
  license:
    accept: true
    secretName: gateway-license
  app:
    replicas: 1
    image: docker.io/caapim/gateway:11.2.1
    imagePullPolicy: IfNotPresent
    #serviceAccountName: ssg-serviceaccount
    management:
      cluster:
        hostname: gateway.brcmlabs.com
    preStopScript:
      enabled: true        # Enable/Disable
      periodSeconds: 3      # Time between checks
      timeoutSeconds: 60    # Timeout - must be lower than terminationGracePeriodSeconds
      excludedPorts:
        - 2124
        - 8777
    resources:
      requests: {}
      limits: {}
    autoscaling:
      enabled: false
    java:
      jvmHeap:
        calculate: true
        percentage: 50
        default: 2g
      extraArgs:
        - -Dcom.l7tech.bootstrap.autoTrustSslKey=trustAnchor,TrustedFor.SSL,TrustedFor.SAML_ISSUER
        - -Dcom.l7tech.server.audit.message.saveToInternal=false
        - -Dcom.l7tech.server.audit.admin.saveToInternal=false
        - -Dcom.l7tech.server.audit.system.saveToInternal=false
        - -Dcom.l7tech.server.audit.log.format=json
        - -Djava.util.logging.config.file=/opt/SecureSpan/Gateway/node/default/etc/conf/log-override.properties
        - -Dcom.l7tech.server.pkix.useDefaultTrustAnchors=true
        - -Dcom.l7tech.security.ssl.hostAllowWildcard=true
    listenPorts:
      harden: true
      custom:
        enabled: false
      ports: []
    service:
      # annotations:
      type: LoadBalancer
      ports:
        - name: https
          port: 8443
          targetPort: 8443
          protocol: TCP
        - name: management
          port: 9443
          targetPort: 9443
          protocol: TCP
    livenessProbe:
      exec:
        command:
        - /bin/bash
        - /opt/docker/rc.d/diagnostic/health_check.sh
      failureThreshold: 25
      initialDelaySeconds: 15
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
    readinessProbe:
      exec:
        command:
        - /bin/bash
        - /opt/docker/rc.d/diagnostic/health_check.sh
      failureThreshold: 25
      initialDelaySeconds: 15
      periodSeconds: 10
      successThreshold: 1
      timeoutSeconds: 1
