tests/e2e/gateway-prestopscript/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 150
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssg
spec:
  template:
    spec:
      terminationGracePeriodSeconds: 90
      containers:
      - lifecycle:
          preStop:
            exec:
              command: [ "/bin/bash","/opt/docker/graceful-shutdown.sh","60", "3","2124","8777" ]
---
apiVersion: v1
kind: Service
metadata:
  name: ssg
